# sparkjar-crews

./: .env.example  .env.litellm  .gitignore  BARON_TRANSFER_FILES.md  README.md  __init__.py  crew_registry.py  main.py  pyproject.toml  requirements-test.txt  requirements.txt  requirements_minimal.txt  resume_baron_ingestion.py  run_api.py  run_baron_ingestion.py  run_full_baron_ingestion.py  run_test.sh  setup.py  setup_test_env.sh  test_book_ingestion_5files.py  test_carlos_5files.py  test_config_standalone.py  test_crew_factory.py  test_crew_factory_integration.py  test_google_drive_download_simple.py  test_image_viewer_tool_updated.py  test_integration.py  test_llm_call_counting.py  test_memory_maker.py  test_sync_db_storage_tool.py  test_task1_complete.py  test_validation_direct.py  update_database_imports.py
.kiro/: README.md
api/: README.md  __init__.py  crew_registry.py  logging_config.py  server.py
crews/: __init__.py  base.py
docs/: Codex_Guidelines_for_Making_a_Crew.md
scripts/: debug_config.py
sparkjar_shared/: __init__.py  auth.py  schemas.py
tests/: test_api_endpoints.py  test_api_server.py  test_config_direct.py  test_crew_factory.py  test_crew_factory_integration.py  test_crew_logger_simple.py  test_google_drive_download_tool.py  test_manual_loop_orchestrator.py  test_memory_maker_api.py  test_models_direct.py  test_ocr_debug.py  test_orchestrator_comprehensive.py  test_simple_5files.py  test_single_page.py  test_sync_db_storage_integration.py  test_validation_integration.py  test_vervelyn_policy.py
tools/: __init__.py  context_query_tool.py  (+9 more)
(+154 files in other folders)
