[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkjar-crews"
version = "0.1.0"
description = "CrewAI crew implementations for SparkJAR platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "SparkJAR", email = "admin@sparkjar.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "sparkjar-shared>=0.1.0",
    "crewai>=0.63.6",
    "crewai-tools>=0.8.3",
    "langchain>=0.1.16",
    "langchain-openai>=0.1.7",
    "python-dotenv>=1.0.1",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "chromadb>=0.5.7",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["crews*", "tools*", "utils*"]
exclude = ["tests*", "test_*", "*.py"]